Se realiza la implementación del contexto, cerando un contexto global para el carrito, utilizando la función de agragar y quitar items de un carrito

--- a/nuevo-proyecto-react/src/components/ItemListContainerComponent/ItemListContainerComponent.css
+++ b/nuevo-proyecto-react/src/components/ItemListContainerComponent/ItemListContainerComponent.css
@@ -1,5 +1,6 @@
 .itemListContainer{
-    width: 95vw;
+    width: 100%;
+    max-width: 100%;
     padding: 2rem;
     height: auto;
     display: grid;
