--- a/nuevo-proyecto-react/src/components/ItemDetailContainerComponent/ItemDetailContainerComponent.css
+++ b/nuevo-proyecto-react/src/components/ItemDetailContainerComponent/ItemDetailContainerComponent.css
@@ -1,23 +1,53 @@
 .detailItem{
-    width: 95dvw;
-    height: 93dvh;
-    display: flex;
+    width: 100%;
+    height: auto;
+    display: grid;
     gap: 2rem;
-    align-items: center;
-    justify-content: center;
-    flex-wrap: wrap;
-    padding: 3rem;
-    color: white;
-    flex: 1 2 auto;
+    grid-template-columns: repeat(2, 1fr);
+    grid-template-rows: repeat(2, 1fr);
     max-width: 100%;
 }
-.detailItem div{
-    width: 50%;
-    height: auto;
+.detailItemImg{
+    grid-column: 1 / 3;
+    grid-row: 1 / 2;
+    max-width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 2rem;
+    && img{
+        width: 100%;
+        height: auto;
+    }
+}
+.detailItemText{
+    grid-column: 1 / 2;
+    grid-row: 2 / 3;
+    max-width: 100%;
     display: flex;
     flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    color: whitesmoke;
 }
-.detailItem img{
-    width: 10rem;
-    height: auto;
+.detailItemButtom{
+    grid-column: 2 / 3;
+    grid-row: 2 / 3;
+    max-width: 100%;
+    display: flex;
+    justify-content: center;
+    gap: 2rem;
+    align-items: center;
+    text-align: center;
+    color: whitesmoke;
+    font-size: 2rem;
+    && button{
+        background-color: rgb(53, 52, 52);
+        color: whitesmoke;
+        &&:hover{
+            background-color: whitesmoke;
+            color: rgb(53, 52, 52);
+        }
+    }
 }
